[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haulage-uk-compliance-mcp"
version = "1.0.0"
description = "UK Operator Licence, tachograph, drivers' hours, DVSA roadside checks for UK haulage operators and 3.5T+ goods vehicles."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["uk-haulage", "operator-licence", "tachograph", "drivers-hours", "dvsa", "compliance", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/meok-ai-labs/haulage-uk-compliance-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
haulage-uk-compliance-mcp = "server:main"
